[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-memory-hub"
version = "0.2.0"
description = "跨 Claude / Codex / OpenCode / OpenClaw 的记忆汇聚与导出"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["PyYAML>=6.0.1"]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
memory-hub = "memory_hub.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.package-data]
memory_hub = ["data/*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
